--- a/Readme
+++ b/Readme
@@ -1,10 +1,11 @@
-Login Screen UI Design
+ UI Design
 
 I am Aryan Sharma, as a coder and designer who also freelances as a designer, specializing in creating templates, 3D models, logo designs, posters, and banners. To contact me, please call me at +917774885259 or email me at aryan.sharma21@st.niituniversity.in
 
 Follow me Instagram - https://www.instagram.com/aryan_sharma_1901/ Github - https://github.com/Zilean12
 
 
-Download to Adobe XD software to access the file. Also it just Login screen i will update next weekend
-
+Download to Adobe XD software to access the file.
 bye bye
+
+you can check out both loginscreen as well as complete admin screen
